--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <!--Barra de menú principal-->
         <ul>
-            <li><a class="active" href="#informes">Informes</a></li>
+            <li><a class="active" href="informes.html">Informes</a></li>
             <li><a href="#contact">Contacto</a></li>
         </ul>
     </header>
